<resources>
    <string name="app_name">Ara-Hunt</string>
    <string name="chkco">CHECK CODE</string>
    <string name="chkans">CHECK ANSWER</string>
    <string name="starthunt">START HUNTING</string>
    <string name="co">©TECHTALK</string>
    <string name="qtitl">Answer  the questions to display the location of Module</string>
    <string name="ques">question00</string>
    <string name="op1">0</string>
    <string name="op2">0</string>
    <string name="op3">0</string>
    <string name="op4">0</string>
    <string name="code">Scan ModuleCode</string>
    <string name="sel">Select Team</string>
    <string name="instr1">1. 10 Modules are hidden in college campus, you have to find them and attach them on the Endoskeleton appropriately to Win the game.</string>
    <string name="instr2">2. You have to Answer multiple choice questions(MCQs) correctly to get the locations of each Module in 30 Seconds.</string>
    <string name="instr3">3. On every Wrong Answer 1 question is skipped and you will miss 2 Modules(1 of the wrong answer and 1 of skipped question).</string>
    <string name="instr4">4. Every Module has its Unique Code and you have to enter this code to unlock next Question.</string>
    <string name="instr5">5. The Team with Maximum or all Modules Attached properly in Minimum time will Win this Hunt.</string>
    <string name="ques1">Google has its HQ at?</string>
    <string name="q1op1">Los Angeles</string>
    <string name="q1op2">London</string>
    <string name="q1op3">California</string> <!--ans-->
    <string name="q1op4">San Francisco</string>
    <string name="ques2">India\'s first SuperComputer?</string>
    <string name="q2op1">PARAM Padma</string>
    <string name="q2op2">PARAM 8000</string><!--ans-->
    <string name="q2op3">PARAM Yuva</string>
    <string name="q2op4">PARAM 8600</string>
    <string name="ques3">BlackBerry was formerly known as?</string>
    <string name="q3op1">RIM</string><!--ans-->
    <string name="q3op2">RMI</string>
    <string name="q3op3">RMO</string>
    <string name="q3op4">None of the above</string>
    <string name="ques4">The first commercially available Li-Fi system was demonstrated by?</string>
    <string name="q4op1">Bg-Fi</string>
    <string name="q4op2">Li-Fi Consortium</string>
    <string name="q4op3">University of Edinburgh</string>
    <string name="q4op4">PureLiFi</string><!--ans-->
    <string name="ques5">Full form of AMD Inc.?</string>
    <string name="q5op1">American Media Devices</string>
    <string name="q5op2">Advanced Micro Devices</string><!--ans-->
    <string name="q5op3">Australian Micro Devices</string>
    <string name="q5op4">Advance Microcontroller Devices</string>
    <string name="ques6">Motorola Mobility is currently owned by?</string>
    <string name="q6op1">Google</string>
    <string name="q6op2">Sony</string>
    <string name="q6op3">HTC</string>
    <string name="q6op4">Lenovo</string><!--ans-->
    <string name="ques7">The first commercially available smartphone running Android was?</string>
    <string name="q7op1">Nexus one</string>
    <string name="q7op2">Android One</string>
    <string name="q7op3">HTC Dream</string><!--ans-->
    <string name="q7op4">LG Prada</string>
    <string name="ques8">Microsoft Cloud platform service is?</string>
    <string name="q8op1">Azure</string><!--ans-->
    <string name="q8op2">OneDrive</string>
    <string name="q8op3">MSN Drive</string>
    <string name="q8op4">Mega</string>
    <string name="ques9">SeaMonkey is?</string>
    <string name="q9op1">Web Browser</string>
    <string name="q9op2">HTML Editor </string>
    <string name="q9op3">IRC client</string>
    <string name="q9op4">All of the above</string><!--ans-->
    <string name="ques10">Google\'s AI to figure out a photo\'s location</string>
    <string name="q10op1">AlphaGo</string>
    <string name="q10op2">PlaNet</string><!--ans-->
    <string name="q10op3">DeepDream</string>
    <string name="q10op4">None of the Above</string>
    <string name="ques11">Remix OS is developed by?</string>
    <string name="q11op1">Google</string>
    <string name="q11op2">XDA Developers</string>
    <string name="q11op3">Jide Technology</string><!--ans-->
    <string name="q11op4">OnePlus</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_ok">OK</string>
    <string name="contents_text">Plain text</string>
    <string name="result_text">Found plain text</string>
    <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
    <string name="msg_default_status">Place a QRcode inside the rectangle to scan it.</string>
    <string name="abt">Tech Talk is a small initiative taken by the students of UIT-RGPV to spread technology awareness among the students. We believe it is us the youth which can take technology awareness to the next level, telling everyone about the latest tech. We always come accross people or seller who force their ideas related technology like saying AMD and Intel are same. We want to make you independent so that when you guys go to buy anything its always easy for you to select the product according. Unlike other tech clubs we are unified community talking about the latest and the greatest of all the big tech giants as well as about tech startup.</string>
    <string name="quote">"Technology is a gift of God. After the gift of life it is perhaps the greatest of God's gifts. It is the mother of civilizations, of arts and of sciences."</string>
</resources>
