<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/background_dark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="INSTRUCTIONS"
        android:id="@+id/textView7"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:lines="3"
        android:text="@string/instr1"
        android:background="#455af8"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instr2"
        android:id="@+id/textView9"
        android:layout_below="@+id/textView8"
        android:layout_marginBottom="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:background="#303f72" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instr3"
        android:id="@+id/textView10"
        android:layout_below="@+id/textView9"
        android:layout_marginBottom="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:background="#040a64" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instr4"
        android:id="@+id/textView11"
        android:layout_below="@+id/textView10"
        android:layout_marginBottom="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:textIsSelectable="false"
        android:background="#090d39" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instr5"
        android:id="@+id/textView12"
        android:layout_below="@+id/textView11"
        android:layout_marginBottom="4dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15sp"
        android:background="#0f1122" />

    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="PLAY"
        android:id="@+id/btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="43dp"
        android:textSize="20sp"
        android:background="@drawable/btn1"
        android:outlineProvider="bounds"
        android:textColor="#f4f6fe" />
</RelativeLayout>